Actualización página web

--- a/contacto.html
+++ b/contacto.html
@@ -101,7 +101,8 @@
         <main>
             <h1> Contacto </h1>
 
-             <form id="formularioContacto" class="container mt-5" action="https://formsubmit.co/sofipacheco001@gmail.com" method="POST">
+             <form id="formularioContacto" class="container mt-5" action="https://formsubmit.co/sofipacheco001@gmail.com" method="POST"> 
+                <!-- : El atributo action especifica la URL a la que se enviarán los datos del formulario una vez que el usuario haga clic en el botón de "Enviar". En lugar de usar una dirección de mi propio servidor, utilizo un servicio gratuito de terceros llamado FormSubmit. Este servicio recibe los datos del formulario y los procesa para enviarlos directamente a la dirección de correo electrónico que proporcionaste en la URL. Esto te permite tener un formulario de contacto funcional sin necesidad de un backend (código del servidor). -->
                 <h1 class="mt-5 mb-4 text-center">Formulario de Contacto</h1>
 
                 <div class="mb-3">
@@ -139,6 +140,6 @@
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="js/formulario.js"></script>
+        
     </body>
 </html>
